Created benchmark with JMH